--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,1 +1,15 @@
-<p>login works!</p>
+<h2>Login</h2>
+
+<form (ngSubmit)="onLogin()" #loginForm="ngForm">
+  <div>
+    <label>Email:</label>
+    <input type="email" name="email" [(ngModel)]="email" required />
+  </div>
+
+  <div>
+    <label>Password:</label>
+    <input type="password" name="password" [(ngModel)]="password" required />
+  </div>
+
+  <button type="submit" [disabled]="loginForm.invalid">Login</button>
+</form>
